--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
-name: astrbot_plugin_grok_suite
+name: astrbot_plugin_grok_suite2
 display_name: Grok AI 助手
-desc: "Grok 全能插件：文生图、图生图、图生视频、智能对话（自动联网）、LLM Tool 调用，一站式 AI 多媒体体验"
-version: 2.3.0
-author: 沐沐沐倾
-repo: https://github.com/muqing-kg/astrbot_plugin_grok_suite
+desc: "修改自（沐沐沐倾）Grok 全能插件：文生图、图生图、图生视频、智能对话（自动联网）、LLM Tool 调用，一站式 AI 多媒体体验"
+version: 2.4.1
+author: liyw0205
+repo: https://github.com/liyw0205/astrbot_plugin_grok_suite
